# rail-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE.md  TEMPLATE.md  alembic.ini  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2725d2374a6d_init_schema.py
app/: auth.py  main.py  models.py  notification.py  observability.py  schemas.py
app/api/: routes.py
app/core/: db.py  settings.py
app/integrations/: external_client.py
docs/: deploy.md  observability.md  release-process.md  security.md
prompts/: README.md  async.md  auth.md  bugfix.md
tests/: conftest.py  test_add.py  test_async_endpoints.py  test_auth.py  test_background_jobs.py  test_div.py  test_external_integration.py  test_mul.py  test_observability.py  test_security_cors.py  test_sub.py
tests/contract/: test_contract_responses.py
tests/integration/: test_db_integration.py
